[package]
name = "repo_harvest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
serde = { version = "1.0.25", features = ["derive"]}
serde_json = "1.0.25"

[dev-dependencies]
tempfile = "3"
assert_fs = "1.1.1"
serde = { version = "1.0.25", features = ["derive"]}
serde_json = "1.0.25"
